--- a/GitWatch/Base.lproj/Main.storyboard
+++ b/GitWatch/Base.lproj/Main.storyboard
@@ -865,37 +865,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="D7s-zS-9om">
+                            <rect key="frame" x="0.0" y="162" width="600" height="5"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="e2I-fj-jrt" detailTextLabel="RpO-d4-Nkr" imageView="1Mg-DD-fYW" style="IBUITableViewCellStyleSubtitle" id="cA8-Xg-NhP">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="e2I-fj-jrt" imageView="1Mg-DD-fYW" style="IBUITableViewCellStyleDefault" id="cA8-Xg-NhP">
                                 <rect key="frame" x="0.0" y="92" width="600" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cA8-Xg-NhP" id="uqb-sn-5pz">
                                     <rect key="frame" x="0.0" y="0.0" width="567" height="69"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="e2I-fj-jrt">
-                                            <rect key="frame" x="83" y="18" width="32" height="20"/>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Hidden Founders" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="e2I-fj-jrt">
+                                            <rect key="frame" x="83" y="0.0" width="482" height="69"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="RpO-d4-Nkr">
-                                            <rect key="frame" x="83" y="38" width="41" height="14"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="repoIcon" id="1Mg-DD-fYW">
+                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="repoIcon" id="1Mg-DD-fYW">
                                             <rect key="frame" x="15" y="0.0" width="53" height="69"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <accessibility key="accessibilityConfiguration" identifier="orgCell"/>
                                         </imageView>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <accessibility key="accessibilityConfiguration" identifier="cell"/>
                                 <connections>
-                                    <segue destination="WoK-id-kRM" kind="show" identifier="GoToRepos" id="cDr-4c-oav"/>
+                                    <segue destination="WoK-id-kRM" kind="show" identifier="GoToRepos" id="ZYZ-m3-YKi"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -905,7 +905,16 @@
                             <outlet property="delegate" destination="gZP-Xi-VXG" id="bHL-3L-s8a"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="eGV-W8-zpA"/>
+                    <navigationItem key="navigationItem" id="eGV-W8-zpA">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="7px-t3-eHf">
+                            <connections>
+                                <action selector="onDoneClick:" destination="gZP-Xi-VXG" id="x2C-Ko-FoQ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableFooterView" destination="D7s-zS-9om" id="MLb-yF-1Sz"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rGz-wA-yjR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -987,6 +996,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="gdc-NJ-PP1">
+                            <rect key="frame" x="0.0" y="64" width="600" height="5"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
                         <sections/>
                         <connections>
                             <outlet property="dataSource" destination="WoK-id-kRM" id="nwK-Qu-f8f"/>
@@ -1015,6 +1029,13 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mlh-ia-rt1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1184" y="328"/>
+        </scene>
+        <!--AV Player View Controller-->
+        <scene sceneID="qiI-N5-oXJ">
+            <objects>
+                <avPlayerViewController videoGravity="AVLayerVideoGravityResizeAspect" id="cWc-eH-09B" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PhT-VT-ZAW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
