--- a/GitWatch/RepositoryCell.xib
+++ b/GitWatch/RepositoryCell.xib
@@ -8,29 +8,23 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="repositoryCell" rowHeight="76" id="J1p-Uv-Hk3" customClass="RepositoryCell">
-            <rect key="frame" x="0.0" y="0.0" width="404" height="76"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="repositoryCell" rowHeight="52" id="J1p-Uv-Hk3" customClass="RepositoryCell">
+            <rect key="frame" x="0.0" y="0.0" width="404" height="52"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J1p-Uv-Hk3" id="nMp-EM-EIu">
-                <rect key="frame" x="0.0" y="0.0" width="404" height="75"/>
+                <rect key="frame" x="0.0" y="0.0" width="404" height="51"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="repoIcon" translatesAutoresizingMaskIntoConstraints="NO" id="hmr-LJ-OAo">
                         <rect key="frame" x="8" y="11" width="16" height="16"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A GitHub client to watch the repos you care about" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3VF-eU-XoZ">
-                        <rect key="frame" x="32" y="30" width="312" height="42"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cd2-xU-m2w">
                         <rect key="frame" x="374" y="27" width="22" height="22"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="22" id="CZZ-0k-K29"/>
                             <constraint firstAttribute="height" constant="22" id="Ron-4R-7Lt"/>
                         </constraints>
-                        <state key="normal" title="check" backgroundImage="selectedCheckbox"/>
+                        <state key="normal" title="check"/>
                         <connections>
                             <action selector="checkboxSelected:" destination="J1p-Uv-Hk3" eventType="touchUpInside" id="wqc-jt-y5o"/>
                         </connections>
@@ -45,6 +39,12 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A GitHub client to watch the repos you care about" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3VF-eU-XoZ">
+                        <rect key="frame" x="32" y="30" width="312" height="19"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="hmr-LJ-OAo" firstAttribute="top" secondItem="nMp-EM-EIu" secondAttribute="topMargin" constant="3" id="AR3-2R-nBI"/>
@@ -54,11 +54,11 @@
                     <constraint firstItem="3VF-eU-XoZ" firstAttribute="leading" secondItem="nMp-EM-EIu" secondAttribute="leadingMargin" constant="24" id="K6O-J3-i1j"/>
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="top" secondItem="nMp-EM-EIu" secondAttribute="topMargin" constant="19" id="RG9-pr-NXX"/>
                     <constraint firstItem="hmr-LJ-OAo" firstAttribute="leading" secondItem="nMp-EM-EIu" secondAttribute="leadingMargin" id="VIU-ow-NTH"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="3VF-eU-XoZ" secondAttribute="bottom" constant="-5" id="Xth-rL-6Wp"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="3VF-eU-XoZ" secondAttribute="bottom" constant="-6" id="Xth-rL-6Wp"/>
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="top" secondItem="nMp-EM-EIu" secondAttribute="topMargin" constant="19" id="ZM4-MQ-jh7"/>
                     <constraint firstItem="hmr-LJ-OAo" firstAttribute="centerY" secondItem="5xP-Aa-gwq" secondAttribute="centerY" id="axS-aC-nPt"/>
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="leading" secondItem="3VF-eU-XoZ" secondAttribute="trailing" constant="69" id="gAp-kQ-ZdV"/>
-                    <constraint firstItem="cd2-xU-m2w" firstAttribute="centerY" secondItem="nMp-EM-EIu" secondAttribute="centerY" id="jHU-MH-9eX"/>
+                    <constraint firstItem="cd2-xU-m2w" firstAttribute="centerY" secondItem="nMp-EM-EIu" secondAttribute="centerY" constant="12.5" id="jHU-MH-9eX"/>
                     <constraint firstAttribute="trailingMargin" secondItem="5xP-Aa-gwq" secondAttribute="trailing" constant="91" id="kpQ-CA-3pA"/>
                     <constraint firstItem="5xP-Aa-gwq" firstAttribute="leading" secondItem="hmr-LJ-OAo" secondAttribute="trailing" constant="8" symbolic="YES" id="nfa-NY-DXa"/>
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="leading" secondItem="3VF-eU-XoZ" secondAttribute="trailing" constant="69" id="pFL-bP-c2a"/>
@@ -68,6 +68,7 @@
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
+                        <exclude reference="Ijr-3b-M8m"/>
                         <exclude reference="kpQ-CA-3pA"/>
                         <exclude reference="RG9-pr-NXX"/>
                         <exclude reference="ZM4-MQ-jh7"/>
@@ -82,11 +83,10 @@
                 <outlet property="repositoryImage" destination="hmr-LJ-OAo" id="NCn-vA-eug"/>
                 <outlet property="repositoryName" destination="5xP-Aa-gwq" id="FwS-BA-JbX"/>
             </connections>
-            <point key="canvasLocation" x="395" y="288"/>
+            <point key="canvasLocation" x="395" y="276"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="repoIcon" width="231" height="303"/>
-        <image name="selectedCheckbox" width="66" height="66"/>
     </resources>
 </document>
