--- a/GitWatch/RepositoryCell.xib
+++ b/GitWatch/RepositoryCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="repositoryCell" rowHeight="52" id="J1p-Uv-Hk3" customClass="RepositoryCell">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="repositoryCell" rowHeight="52" id="J1p-Uv-Hk3" customClass="RepositoryCell">
             <rect key="frame" x="0.0" y="0.0" width="404" height="52"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J1p-Uv-Hk3" id="nMp-EM-EIu">
@@ -78,6 +78,7 @@
                 </variation>
             </tableViewCellContentView>
             <accessibility key="accessibilityConfiguration" identifier="SimpleTableCell"/>
+            <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="checkbox" destination="cd2-xU-m2w" id="tRe-iq-LSO"/>
                 <outlet property="repositoryImage" destination="hmr-LJ-OAo" id="NCn-vA-eug"/>
